adjusted notation in methods section, trimmed data and related work sections

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -71,8 +71,7 @@
  publisher = {Zenodo},
  title = {Data from: Spatio-Temporal Graph Neural Network
 for Urban Spaces: Interpolating Citywide Traffic
-Volume
-},
+Volume},
  url = {https://doi.org/10.5281/zenodo.15332147},
  year = {2025}
 }
@@ -122,9 +121,12 @@ Volume
 }
 
 @techreport{hakkert2002uses,
- author = {Hakkert, A Shalom and Braimaister, L and Van Schagen, I},
- institution = {SWOV Institute for Road Safety SWOV, Leidschendam},
- title = {The uses of exposure and risk in road safety studies},
+ address = {Leidschendam, The Netherlands},
+ author = {Hakkert, A. S. and Braimaister, L.},
+ institution = {SWOV Institute for Road Safety Research},
+ number = {R-2002-12},
+ title = {The Uses of Exposure and Risk in Road Safety Studies},
+ url = {http://www.swov.nl/rapport/R-2002-12.pdf},
  year = {2002}
 }
 
@@ -141,16 +143,57 @@ Volume
 }
 
 @article{NateraOrozco2020,
-  title = {Data-driven strategies for optimal bicycle network growth},
-  volume = {7},
-  ISSN = {2054-5703},
-  url = {http://dx.doi.org/10.1098/rsos.201130},
-  DOI = {10.1098/rsos.201130},
-  number = {12},
-  journal = {Royal Society Open Science},
-  publisher = {The Royal Society},
-  author = {Natera Orozco,  Luis Guillermo and Battiston,  Federico and I{\~n}iguez,  Gerardo and Szell,  Michael},
-  year = {2020},
-  month = dec,
-  pages = {201130}
+ author = {Natera Orozco,  Luis Guillermo and Battiston,  Federico and I{\~n}iguez,  Gerardo and Szell,  Michael},
+ doi = {10.1098/rsos.201130},
+ issn = {2054-5703},
+ journal = {Royal Society Open Science},
+ number = {12},
+ pages = {201130},
+ publisher = {The Royal Society},
+ title = {Data-driven strategies for optimal bicycle network growth},
+ url = {http://dx.doi.org/10.1098/rsos.201130},
+ volume = {7},
+ year = {2020}
+}
+
+@article{Morris1983,
+ author = {Morris,  Carl N.},
+ doi = {10.1080/01621459.1983.10477920},
+ issn = {1537-274X},
+ journal = {Journal of the American Statistical Association},
+ number = {381},
+ pages = {47–55},
+ publisher = {Informa UK Limited},
+ title = {Parametric Empirical Bayes Inference: Theory and Applications},
+ url = {http://dx.doi.org/10.1080/01621459.1983.10477920},
+ volume = {78},
+ year = {1983}
+}
+
+@article{Lord2010,
+ author = {Lord,  Dominique and Mannering,  Fred},
+ doi = {10.1016/j.tra.2010.02.001},
+ issn = {0965-8564},
+ journal = {Transportation Research Part A: Policy and Practice},
+ number = {5},
+ pages = {291–305},
+ publisher = {Elsevier BV},
+ title = {The statistical analysis of crash-frequency data: A review and assessment of methodological alternatives},
+ url = {http://dx.doi.org/10.1016/j.tra.2010.02.001},
+ volume = {44},
+ year = {2010}
+}
+
+@article{Hauer2002,
+ author = {Hauer,  Ezra and Harwood,  Douglas W. and Council,  Forrest M. and Griffith,  Michael S.},
+ doi = {10.3141/1784-16},
+ issn = {2169-4052},
+ journal = {Transportation Research Record: Journal of the Transportation Research Board},
+ number = {1},
+ pages = {126–131},
+ publisher = {SAGE Publications},
+ title = {Estimating Safety by the Empirical Bayes Method: A Tutorial},
+ url = {http://dx.doi.org/10.3141/1784-16},
+ volume = {1784},
+ year = {2002}
 }
